Fixing breadcrumb navigation Changed from position: absolute to flex item to avoid content overlap

--- a/_sass/components/_breadcrumbs.scss
+++ b/_sass/components/_breadcrumbs.scss
@@ -2,13 +2,7 @@
 #breadcrumbs {
     width: 100%;
 
-    padding: {
-        top: $bar-height;
-    };
-
     z-index: 4;
-
-    position: absolute;
 
     background-color: rgba($white, $alpha: 0.7);
 
